//
// This source file is part of the Spezi open-source project
//
// SPDX-FileCopyrightText: 2022 Stanford University and the project authors (see CONTRIBUTORS.md)
//
// SPDX-License-Identifier: MIT
//

// MARK: - General
"OR" = "or";
"YES" = "Yes";
"NO" = "No";
"MISSING_ACCOUNT_SERVICES" = "**No Account Services set up.**\n\nPlease refer to the documentation of the SpeziAccount package on how to set up an AccountService!";
"MISSING_ACCOUNT_DETAILS" = "**Couldn't find a user account.**\n\nThis view requires an active user account.\nRefer to the documentation of the AccountSetup view on how to setup a user account!";
"OPEN_DOCUMENTATION" = "Open Documentation";

// MARK: - Account
"ACCOUNT_WELCOME" = "Your Account";
"ACCOUNT_WELCOME_SUBTITLE" = "Please login to your account. Or create a new one if you don't have one already.";
"ACCOUNT_WELCOME_SIGNED_IN_SUBTITLE" = "You are already logged in with the account shown below. Continue or change your account by logging out.";

// MARK: - Account Operation Error
"ACCOUNT_ERROR_VALUES_MISSING_VALUE_DESCRIPTION" = "Missing Account Values";
"ACCOUNT_ERROR_VALUES_MISSING_VALUE_REASON %@" = "The following required account values were not supplied: %@.";
"ACCOUNT_ERROR_ACCOUNT_ID_CHANGED_DESCRIPTION" = "Failed Account Operation";
"ACCOUNT_ERROR_ACCOUNT_ID_CHANGED_REASON" = "You primary account identifier cannot be changed as it is required to be stable!";
"ACCOUNT_ERROR_RECOVERY" = "Raise an issue with the developer of the Account Service.";

// MARK: - UserId and Password
"UP_PASSWORD" = "Password";
"NEW_PASSWORD" = "New";
"NEW_PASSWORD_PROMPT" = "enter password";
"REPEAT_PASSWORD" = "Verify";
"REPEAT_PASSWORD_PROMPT" = "re-enter password";
"UP_FORGOT_PASSWORD" = "Forgot Password?";
"UP_LOGIN" = "Login";
"UP_SIGNUP" = "Signup";
"UP_LOGOUT" = "Logout";
"UP_NO_ACCOUNT_YET" = "Don't have an Account yet?";

// MARK: - UserId and Password (Login)
"UP_LOGIN_FAILED_DEFAULT_ERROR" = "Could not login!";

// MARK: - UserId and Password (Signup)
"UP_SIGNUP_HEADER" = "Create a new Account";
"UP_SIGNUP_INSTRUCTIONS" = "Please fill out the details below to create your new account.";
"UP_CREDENTIALS" = "Credentials";
"UP_NAME" = "Name";
"UP_CONTACT_DETAILS" = "Contact Details";
"UP_PERSONAL_DETAILS" = "Personal Details";
"UP_SIGNUP_FAILED_DEFAULT_ERROR" = "Could not sign up!";
"CLOSE" = "Close";

// MARK: - UserId and Password (Password Reset)
"UP_RESET_PASSWORD" = "Reset Password";
"UAP_PASSWORD_RESET_SUBTITLE %@" = "Please enter your %@ of your Account. A password reset email will be sent to the linked email address.";
"UAP_RESET_PASSWORD_PROCESS_SUCCESSFUL_LABEL" = "Sent out a link to reset the password.";
"UAP_RESET_PASSWORD_FAILED_DEFAULT_ERROR" = "Could not reset the password!";

// MARK: - Follow-Up Information
"FOLLOW_UP_INFORMATION_TITLE" = "Finish Account Setup";
"FOLLOW_UP_INFORMATION_INSTRUCTIONS" = "Please fill out the details below to complete your account setup.";
"FOLLOW_UP_INFORMATION_COMPLETE" = "Complete";

// MARK: - Account Summary
"UP_LOGOUT_FAILED_DEFAULT_ERROR" = "Could not logout!";

// MARK - Account Overview
"ACCOUNT_OVERVIEW" = "Account Overview";
"DELETE_ACCOUNT" = "Delete Account";
"DONE" = "Done";
"EDIT" = "Edit";
"DELETE"= "Delete";
"CANCEL" = "Cancel";
"ACCOUNT_OVERVIEW_EDIT_DEFAULT_ERROR" = "Could not save account details!";
"REMOVE_DEFAULT_ERROR"= "Could not remove account!";
"SIGN_IN_AND_SECURITY" = "Sign-In & Security";
"VALUE_ADD %@" = "Add %@";
"CHANGE_PASSWORD" = "Change Password";

// MARK - Account Header
"ACCOUNT_HEADER_CAPTION" = "Account Information & Details";

// MARK - Confirmation Dialogs
"CONFIRMATION_DISCARD_CHANGES_TITLE" = "Are you sure you want to discard your changes?";
"CONFIRMATION_DISCARD_CHANGES" = "Discard Changes";
"CONFIRMATION_DISCARD_INPUT_TITLE" = "Are you sure you want to discard your input?";
"CONFIRMATION_DISCARD_INPUT" = "Discard Input";
"CONFIRMATION_DISCARD_ADDITIONAL_INFO_TITLE" = "This account information is required. If you abort, you will automatically be signed out!";
"CONFIRMATION_DISCARD_ADDITIONAL_INFO" = "Cancel and Logout";
"CONFIRMATION_KEEP_EDITING"= "Keep Editing";
"CONFIRMATION_LOGOUT" = "Are you sure you want to logout?";
"CONFIRMATION_REMOVAL" = "Are you sure you want to delete your account?";
"CONFIRMATION_REMOVAL_SUGGESTION" = "This change is permanent and you won't be able to recover your account information.";

// MARK: - Validation Rules
"VALIDATION_RULE_PASSWORDS_NOT_MATCHED" = "Passwords do not match.";
"VALIDATION_RULE_ALWAYS_ACCEPT" = "This rule always accepts.";

// MARK: - Account Id
"ACCOUNT_ID" = "Account Identifier";

// MARK: - User Id
"USER_ID" = "User Identifier";
"USER_ID_EMAIL" = "E-Mail Address";
"USER_ID_USERNAME" = "Username";

// MARK: - Person Name
"NAME" = "Name";
"UAP_SIGNUP_GIVEN_NAME_TITLE" = "First";
"UAP_SIGNUP_GIVEN_NAME_PLACEHOLDER" = "enter first name";
"UAP_SIGNUP_FAMILY_NAME_TITLE" = "Last";
"UAP_SIGNUP_FAMILY_NAME_PLACEHOLDER" = "enter last name";

// MARK: - Date Of Birth
"UAP_SIGNUP_DATE_OF_BIRTH_TITLE" = "Date of Birth";
"ADD_DATE" = "Add Date";

// MARK: - Gender Identity
"GENDER_IDENTITY_TITLE" = "Gender Identity";
"GENDER_IDENTITY_FEMALE" = "Female";
"GENDER_IDENTITY_MALE" = "Male";
"GENDER_IDENTITY_TRANSGENDER" = "Transgender";
"GENDER_IDENTITY_NON_BINARY" = "Non-binary";
"GENDER_IDENTITY_PREFER_NOT_TO_STATE" = "Choose not to answer";
