...
                    } label: {
                        Label("Delete", systemImage: "trash")
                    }
                }
            }
        }
        .navigationTitle("Phone Numbers")
        .toolbar {
            ToolbarItem(placement: .primaryAction) {
                Button {
                    phoneNumberViewModel.presentSheet = true
                } label: {
                    Image(systemName: "plus")
                        .accessibilityLabel("Add Phone Number")
                }
            }
        }
        .sheet(isPresented: $phoneNumberViewModel.presentSheet) {
            PhoneNumberSteps()
                .environment(phoneNumberViewModel)
...
