...
            .onAppear {
                isActive = true
            }
            .onDisappear {
                isActive = false
            }
            .alert("Security Alert", isPresented: isPresented, presenting: service.securityContinuation) { continuation in
                Button("Cancel", role: .cancel) {
                    continuation.resume(with: .failure(MockAccountService.AccountError.cancelled))
                }
                Button("Continue", role: .destructive) {
                    continuation.resume()
                }
            }
    }
}

...
